Fixed center alignment bug, also adjusted our statement

--- a/frontend/src/Sass/HomeComponent.scss
+++ b/frontend/src/Sass/HomeComponent.scss
@@ -1,11 +1,23 @@
+body,
+html {
+  height: 100%;
+  margin: 0;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+
 .home-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center; /* Aligns the .home block to the top of the container */
     justify-content: flex-start; /* Horizontally centers the .home block */
     height: 100vh; /* Full height to ensure the container takes up the entire viewport height */
+    width: 100%; 
     text-align: center;
-    padding-top: 100px;
   }
 
   .home {
@@ -15,6 +27,7 @@
     text-align: center;
     width: 60%;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+    margin-top: 200px;
     
     &__title {
       font-size: 2.5em;
